--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
+
+@layer base {
+  body {
+    @apply font-body font-normal;
+  }
+  .page {
+    @apply flex flex-col min-h-screen;
+  }
+
+  main {
+    @apply flex-sticky;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-heading;
+  }
+
+  .base-transition {
+    @apply transition duration-200 ease-in-out;
+  }
+
+  .text-transition {
+    @apply hover:text-primary dark:hover:text-primary;
+  }
+  .border-transition {
+    @apply hover:border-primary dark:hover:border-primary;
+  }
+
+  .bg-transition {
+    @apply hover:bg-primary dark:hover:bg-primary;
+  }
+}
+
 @tailwind utilities;
