--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,14 +1,11 @@
 @tailwind base;
 @tailwind components;
+@tailwind utilities;
 
 @layer base {
   body {
     @apply font-body font-normal;
   }
-  .page {
-    @apply flex flex-col min-h-screen;
-  }
-
   main {
     @apply flex-sticky;
   }
@@ -19,7 +16,13 @@
   h4,
   h5,
   h6 {
-    @apply font-heading;
+    @apply font-heading font-bold;
+  }
+}
+
+@layer components {
+  .page {
+    @apply flex flex-col min-h-screen;
   }
 
   .base-transition {
@@ -41,6 +44,9 @@
   .img-transition {
     @apply hover:opacity-75;
   }
-}
 
-@tailwind utilities;
+  .title-decorator::before {
+    content: "";
+    @apply absolute bottom-0 left-0 h-1 w-full bg-blue-600;
+  }
+}
