swiper and change logo

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -25,20 +25,25 @@
     @apply flex flex-col min-h-screen;
   }
 
+  .custom-container {
+    @apply w-full mx-auto;
+    max-width: calc(100% - 60px);
+  }
+
   .base-transition {
     @apply transition duration-200 ease-in-out;
   }
 
   .text-transition {
-    @apply hover:text-primary dark:hover:text-primary;
+    @apply hover:text-blue-600 dark:hover:text-blue-600;
   }
 
   .border-transition {
-    @apply hover:border-primary dark:hover:border-primary;
+    @apply hover:border-blue-600 dark:hover:border-blue-600;
   }
 
   .bg-transition {
-    @apply hover:bg-primary dark:hover:bg-primary;
+    @apply hover:bg-blue-600 dark:hover:bg-blue-600;
   }
 
   .img-transition {
@@ -48,5 +53,9 @@
   .title-decorator::before {
     content: "";
     @apply absolute bottom-0 left-0 h-1 w-full bg-blue-600;
+  }
+
+  .swiper-container {
+    @apply h-[800px];
   }
 }
