--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    scroll-behavior: smooth;
+  }
   body {
     @apply font-body font-normal;
   }
